log
Sat Apr 23 22:18:18 UTC 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:3: error: expected ‘;’ before ‘return’
   return NULL;
   ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
38c8363
Sat Apr 23 22:19:02 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
9db88b7
Sat Apr 23 22:53:33 UTC 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
3b65e14
